changed display format

--- a/COMP123-S2019-Assignment 5-Computers/Properties/Resources.resx
+++ b/COMP123-S2019-Assignment 5-Computers/Properties/Resources.resx
@@ -124,10 +124,13 @@
   <data name="computer_logo2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\computer_logo2.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="computer02" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\computer02.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="computer_logo3" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\computer_logo3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="computer02" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\computer02.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="computer_logo31" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\computer_logo3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
